# CRDCLib

./: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
CRDCLib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
crdclib.egg-info/: PKG-INFO
docs/: CRDCStuff.html  CRDCStuff.md  CRDCStuff.txt  DHQueries.md  DHQueries.txt
docs/source/: conf.py  crdclib.rst  dhqueries.rst  index.rst  usage.rst
source/: conf.py  crdclib.rst  dhqueries.rst  index.rst  queries.rst  usage.rst
src/: CRDCStuff.py  DHQueries.py
src/CRDCLib/: CRDCLib.py  DHQueries.py  __init__.py
src/CRDCLib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/CRDCLib/CRDCLib.egg-info/: PKG-INFO  SOURCES.txt
src/crdclib/: crdclib.py  dhqueries.py
src/crdclib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/: test_cleanstring.py  test_dhAPICall.py  test_getAPICreds.py  test_getCDE.py  test_getCDEPVList.py  test_getSTSCCPVs.py  test_getSTSPVList.py  test_mdfAddTerms.py  test_mdfAnnotateTerms.py  test_mdfBuildLoadsheets.py  test_mdfWriteModelFiles.py  test_readyaml.py  yamltestfile.yml
test/data/: crdc_submission.yml  crdc_submission_properties.yml
test/output/: CRDC-model.yml
