[metadata]
name = crdclib
version = attr: crdclib.0.0.1
author = Todd Pihl
author_email = todd.pihl@gmail.com
description = A package of CRDC related routines I use
long_description = file: README.md, LICENSE
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
python_requires = >=3.7
install_requires =
    requests
    pyyaml

[options.packages.find]
where=src